samples/_failures_safe/1761800329_60de33_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_01bfd7dc.c: In function ‘main’:
./samples/SAFE/__tmp_01bfd7dc.c:126:16: error: missing terminating " character
  126 |         printf("\nMatrices cannot be multiplied (columns of first
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_01bfd7dc.c:126:9: error: expected expression at end of input
  126 |         printf("\nMatrices cannot be multiplied (columns of first
      |         ^~~~~~
./samples/SAFE/__tmp_01bfd7dc.c:126:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_01bfd7dc.c:126:9: error: expected declaration or statement at end of input
